Authentication and Authorization added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-spring.security.user.name = Yasiru
-spring.security.user.password = 123
+#spring.security.rider.name = Yasiru
+#spring.security.rider.password = 123
